[gd_scene load_steps=7 format=3 uid="uid://cqt5vq6wjro5i"]

[ext_resource type="Script" path="res://menu.gd" id="1_lk71k"]
[ext_resource type="Texture2D" uid="uid://bqaqn2i4fohkg" path="res://Sphere.png" id="2_ecqyo"]
[ext_resource type="PackedScene" uid="uid://da6oeu4lbufem" path="res://actors/trail.tscn" id="3_n38tp"]
[ext_resource type="Script" path="res://main_menu_line.gd" id="4_lx74q"]

[sub_resource type="LabelSettings" id="LabelSettings_whmqw"]
font_size = 120

[sub_resource type="LabelSettings" id="LabelSettings_os6gl"]
font_size = 25

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lk71k")

[node name="Title" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -355.0
offset_top = 64.0
offset_right = 355.0
offset_bottom = 229.0
grow_horizontal = 2
text = "ColorImpact"
label_settings = SubResource("LabelSettings_whmqw")

[node name="Sprite2D" type="Sprite2D" parent="Title"]
position = Vector2(931, 302)
texture = ExtResource("2_ecqyo")

[node name="Line2D" parent="Title" instance=ExtResource("3_n38tp")]
position = Vector2(708, 367)
points = PackedVector2Array(-61, -104, -51.6366, -96.7174, -40.626, -88.1535, -30.2034, -80.0471, -13, -70, 10.7826, -62, 35.3706, -55.5736, 75, -53, 100, -51, 137.952, -55.3549, 213, -66)
script = ExtResource("4_lx74q")

[node name="Level1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -302.0
offset_right = 47.0
offset_bottom = -271.0
grow_horizontal = 2
grow_vertical = 0
text = "Play level 1"

[node name="Level2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -251.0
offset_right = 47.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 0
text = "Play level 2"

[node name="Help" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -206.0
offset_right = 22.0
offset_bottom = -175.0
grow_horizontal = 2
grow_vertical = 0
text = "Help"

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -157.0
offset_right = 42.0
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 0
text = "Exit game"

[node name="Help text" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -102.5
offset_right = 255.0
offset_bottom = 102.5
grow_horizontal = 2
grow_vertical = 2
text = "The goal of the game is to hit the goal with enough impact.
Bouncing on walls the ball hasn't hit before gives you more speed.

Use left and right arrows to steer the canon.
Press space to fire.
Press r to restart a level.
Press escape to return to the main menu


Lake and mountain background provided by LSky
"
label_settings = SubResource("LabelSettings_os6gl")
horizontal_alignment = 1

[node name="Exit help text" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -208.0
offset_right = 47.0
offset_bottom = -177.0
grow_horizontal = 2
grow_vertical = 0
text = "Exit help"

[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Exit help text" to="." method="_on_exit_help_text_pressed"]
